Preparation for web-development partial 2 release
